5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1643_2447.log
== SUBMITION (2019-04-12 13:52:50) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta {}".format(preco-valor))
if (preco < valor):
	print("Troco de {}".format(valor-preço))
-- EXECUTION TIME:
0.129246
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:52:52) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta {}".format(preco-valor))
if (preco < valor):
	print("Troco de {}".format(valor-preço))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:53:28) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta {}".format(preco-valor))
else:
	print("Troco de {}".format(valor-preço))
-- EXECUTION TIME:
0.170221
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:54:11) 
-- CODE:
valor=float(input())
preco=float(input())


if (preco > valor):
	print("Falta {}".format(preco-valor))
else:
	print("Troco de {}".format(valor-preço))
-- EXECUTION TIME:
0.209994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 8, in <module>
    print("Troco de {}".format(valor-pre\xe7o))
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:54:12) 
-- CODE:
valor=float(input())
preco=float(input())


if (preco > valor):
	print("Falta {}".format(preco-valor))
else:
	print("Troco de {}".format(valor-preço))
-- EXECUTION TIME:
0.210252
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 8, in <module>
    print("Troco de {}".format(valor-pre\xe7o))
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:54:12) 
-- CODE:
valor=float(input())
preco=float(input())


if (preco > valor):
	print("Falta {}".format(preco-valor))
else:
	print("Troco de {}".format(valor-preço))
-- EXECUTION TIME:
0.258747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 8, in <module>
    print("Troco de {}".format(valor-pre\xe7o))
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:54:12) 
-- CODE:
valor=float(input())
preco=float(input())


if (preco > valor):
	print("Falta {}".format(preco-valor))
else:
	print("Troco de {}".format(valor-preço))
-- EXECUTION TIME:
0.173324
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 8, in <module>
    print("Troco de {}".format(valor-pre\xe7o))
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:54:12) 
-- CODE:
valor=float(input())
preco=float(input())


if (preco > valor):
	print("Falta {}".format(preco-valor))
else:
	print("Troco de {}".format(valor-preço))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print("Troco de {}".format(valor-preço))
NameError: name 'preço' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:54:13) 
-- CODE:
valor=float(input())
preco=float(input())


if (preco > valor):
	print("Falta {}".format(preco-valor))
else:
	print("Troco de {}".format(valor-preço))
-- EXECUTION TIME:
0.396227
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 8, in <module>
    print("Troco de {}".format(valor-pre\xe7o))
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:54:13) 
-- CODE:
valor=float(input())
preco=float(input())


if (preco > valor):
	print("Falta {}".format(preco-valor))
else:
	print("Troco de {}".format(valor-preço))
-- EXECUTION TIME:
0.231877
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 8, in <module>
    print("Troco de {}".format(valor-pre\xe7o))
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:54:42) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta {:.2f}".format(preco-valor))
else:
	print("Troco de {:.2f}".format(valor-preço))
-- EXECUTION TIME:
0.200541
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.00
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:54:47) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta {:.2f}".format(preco-valor))
else:
	print("Troco de {:.2f}".format(valor-preço))
-- OUTPUT:
Falta 26.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:56:40) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta ",round(preco-valor,2))
else:
	print("Troco de ",round(valor-preço,2))
-- EXECUTION TIME:
0.148071
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:56:42) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta ",round(preco-valor,2))
else:
	print("Troco de ",round(valor-preço,2))
-- EXECUTION TIME:
0.159913
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Falta  26.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:56:42) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta ",round(preco-valor,2))
else:
	print("Troco de ",round(valor-preço,2))
-- EXECUTION TIME:
0.184335
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:57:51) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta ",preco-valor)
else:
	print("Troco de ",valor-preço)
-- EXECUTION TIME:
0.130703
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:57:53) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta ",preco-valor)
else:
	print("Troco de ",valor-preço)
-- EXECUTION TIME:
0.152754
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:58:06) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta",preco-valor)
else:
	print("Troco de",valor-preço)
-- EXECUTION TIME:
0.153104
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:58:07) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta",preco-valor)
else:
	print("Troco de",valor-preço)
-- EXECUTION TIME:
0.184825
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta 26.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:58:07) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta",preco-valor)
else:
	print("Troco de",valor-preço)
-- EXECUTION TIME:
0.194668
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 7, in <module>
    print("Troco de",valor-pre\xe7o)
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:58:07) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta",preco-valor)
else:
	print("Troco de",valor-preço)
-- EXECUTION TIME:
0.188805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 7, in <module>
    print("Troco de",valor-pre\xe7o)
NameError: name 'pre\xe7o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:58:46) 
-- CODE:
preco=float(input())
valor=float(input())

if (preco > valor):
	print("Falta",preco-valor)
else:
	print("Troco de",valor-preco)
-- EXECUTION TIME:
0.193805
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
